# SimpleGraphicsEngine

./: .gitignore  CMakeLists.txt  README.md  clang-format  clang-tidy  main.cpp  vert.spv
renderer/: CMakeLists.txt  QVulkanRenderer.cpp  QVulkanRenderer.h  frag copy.spv
resourceManager/: CMakeLists.txt  Component.h  Entity.h  Resource.h  ResourceManager.cpp  ResourceManager.h  World.h
ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  QVulkanMainWindow.cpp  QVulkanMainWindow.h
